# tilec

./: .ghci.repl  .gitignore  .hlint.yaml  README.md  cabal.project  s.cabal  tilec.cabal  todo.md
script/: ghci-flags  ghci-flags-dependencies
src/S/: Context.hs  Core.hs  Elab.hs  Eval.hs  Library.hs  Pretty.hs  Print.hs  Problem.hs  Scope.hs  Semiring.hs  Stack.hs  Surface.hs  Syntax.hs  Term.hs  Type.hs  Value.hs
src/S/Syntax/: Check.hs  Classes.hs  Elab.hs  Eval.hs  Free.hs  Pretty.hs  Term.hs
src/Tile/: Context.hs  Elab.hs  Error.hs  Library.hs  Parse.hs  Permutable.hs  Plicit.hs  Plicity.hs  Pretty.hs  Print.hs  Reconstruct.hs  Script.hs  Solve.hs  Stack.hs  Syntax.hs  Term.hs  Type.hs
src/Tile/Functor/: Compose.hs
src/Tile/Script/: Lifted.hs
src/Tile/Syntax/: Lifted.hs
test/: Test.hs
test/Test/: Gen.hs  Term.hs
