cabal-version:       2.2

name:                tilec
version:             0.0.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
-- copyright:
category:            Language
-- extra-source-files:

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:
    Tile.Elab
    Tile.Library
    Tile.Plicit
    Tile.Pretty
    Tile.Print
    Tile.Reconstruct
    Tile.Syntax
    Tile.Term
    Tile.Type
  -- other-modules:
  -- other-extensions:
  build-depends:
    , base ^>=4.13.0.0
    , containers
    , fused-effects
    , prettyprinter
    , prettyprinter-ansi-terminal
    , terminal-size
    , transformers
  hs-source-dirs:      src

test-suite test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  other-modules:
    Test.Gen
    Test.Term
  build-depends:
    , base
    , containers
    , mtl
    , tasty ^>= 1.2
    , tasty-hedgehog ^>= 1
    , tilec
