cabal-version:       2.2

name:                tilec
version:             0.0.0.0
synopsis:            Compiler for the tile programming language.
description:         Compiler for tile, a minimalistic dependently-typed lambda calculus.
bug-reports:         https://github.com/robrix/tilec
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2020 Rob Rix
category:            Language

extra-source-files:
  README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:
    Tile.Elab
    Tile.Library
    Tile.Parse
    Tile.Plicit
    Tile.Pretty
    Tile.Print
    Tile.Reconstruct
    Tile.Solve
    Tile.Syntax
    Tile.Term
    Tile.Type
  build-depends:
    , base ^>= 4.13
    , containers
    , fused-effects
    , fused-effects-parser
    , parsers
    , prettyprinter
    , prettyprinter-ansi-terminal
    , semilattices
    , terminal-size
    , transformers
    , unordered-containers
  hs-source-dirs: src

test-suite test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  other-modules:
    Test.Gen
    Test.Term
  build-depends:
    , base
    , containers
    , hedgehog
    , mtl
    , tasty ^>= 1.2
    , tasty-hedgehog ^>= 1
    , tilec
